removed align-self for .name in .gallery increased the gap in .gallery added a fixed width to img in the .photos

--- a/gallerystyle.css
+++ b/gallerystyle.css
@@ -185,7 +185,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 48px;
 }
 
 .gallery .title {
@@ -207,12 +207,10 @@ a {
     justify-content: center;
     align-items: center;
     flex: 1;
-    width: 80vw;
     gap: 20px;
 }
 
 .name {
-    align-self: flex-start;
     font-size: 18px;
     font-weight: bold;
 
@@ -231,6 +229,7 @@ a {
     border: 5px solid #3882F6;
     border-radius: 10px;
     height: 200px;
+    width: 320px;
     object-fit: fill;
     flex: 1;
     transition: 0.8s ease-in-out;
